gulp fully setup with browsersync and scss compiler

--- a/index.html
+++ b/index.html
@@ -5,21 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Grupp Projekt</title>
-    <link rel="stylesheet" href="public/dist/styles.css">
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-    <header>
-        Header
-    </header>
-
-    <ul>
-        Lista
-        <li>1</li>
-        <li>2</li>
-        <li>3</li>
-    </ul>
-
-    <a href="">länk</a>
+    <main id="main">
+        <header id="header">header</header>
+        <section id="item-list">item-list</section>
+        <section id="payment">payment</section>
+        <footer id="footer">footer</footer>
+    </main>
     
+    <script src="js/script.js"></script>
 </body>
 </html>
