html markup done

--- a/index.html
+++ b/index.html
@@ -5,16 +5,72 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Grupp Projekt</title>
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
+    
 </head>
 <body>
     <main id="main">
-        <header id="header">header</header>
-        <section id="item-list">item-list</section>
-        <section id="payment">payment</section>
-        <footer id="footer">footer</footer>
+        <nav id="navbar">
+            <div class="nav-wrapper">
+                <div class="logotype">
+                    <img src="logotype.svg" alt="logotype">
+                </div>
+                <ul id="nav-container">
+                   <a href=""><li class="nav-item">product</li></a> 
+                   <a href=""><li class="nav-item">about</li></a> 
+                   <a href=""><li class="nav-item">contact</li></a> 
+                </ul>
+                <a class="nav-checkout" href="#varukorg">
+                    <!-- SVG HERE -->
+                </a>
+            </div>
+        </nav>
+
+        <header id="header">
+            <div class="header-wrapper">
+                <div class="header-hero">
+                    <h1>HERO TEXT</h1>
+                </div>
+            </div>
+        </header>
+
+        <section id="cards">
+            <div class="cards-wrapper">
+                <div class="landing-cards">
+                    <div class="landing-image">
+                        <img src="" alt="">
+                    </div>
+                    <div class="landing-textbox">
+                        <h3>Lorem ipsum</h3>
+                        <button>Knapp</button>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section id="about">
+            <div class="about-wrapper">
+                <div class="about-container">
+                    <div class="about-image">
+                        <img src="" alt="about-image">
+                    </div>
+                    <div class="about-text">
+                        <h3>titel</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia, ullam expedita veniam optio est rem deserunt ex consectetur corrupti quidem omnis dolor fugit, cum nobis beatae vel exercitationem ad eum!</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <footer id="footer">
+            <div class="footer-wrapper">
+
+            </div>
+        </footer>
     </main>
     
     <script src="js/script.js"></script>
 </body>
 </html>
+
