first commit for landing cards

--- a/index.html
+++ b/index.html
@@ -39,11 +39,29 @@
             <div class="cards-wrapper">
                 <div class="landing-cards">
                     <div class="landing-image">
-                        <img src="" alt="">
+                        <img src="https://images.pexels.com/photos/2974657/pexels-photo-2974657.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" alt="">
                     </div>
                     <div class="landing-textbox">
                         <h3>Lorem ipsum</h3>
-                        <button>Knapp</button>
+                        <button class="button button-primary">Knapp</button>
+                    </div>
+                </div>
+                <div class="landing-cards">
+                    <div class="landing-image">
+                        <img src="https://images.pexels.com/photos/2974657/pexels-photo-2974657.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" alt="">
+                    </div>
+                    <div class="landing-textbox">
+                        <h3>Lorem ipsum</h3>
+                        <button class="button button-primary">Knapp</button>
+                    </div>
+                </div>
+                <div class="landing-cards">
+                    <div class="landing-image">
+                        <img src="https://images.pexels.com/photos/2974657/pexels-photo-2974657.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" alt="">
+                    </div>
+                    <div class="landing-textbox">
+                        <h3>Lorem ipsum</h3>
+                        <button class="button button-primary">Knapp</button>
                     </div>
                 </div>
             </div>
