html code added, missing video, otherwise done

--- a/index.html
+++ b/index.html
@@ -27,12 +27,17 @@
                 </a>
             </div>
         </nav>
-
+        
         <header id="header">
             <div class="header-wrapper">
-                <div class="header-hero">
-                    <h1>HERO TEXT</h1>
+                <div class="header-video">
+                    <video src="/video_bg/cityvid.mp4" autoplay="true" loop="true"></video>
                 </div>
+                <div class="header-hero">
+                    <h1>Enkelt, snabbt och miljövänligt.</h1>
+                    <button class="button button-primary">Läs mer</button>
+                </div>
+                <div class="header-overlay"></div>
             </div>
         </header>
 
