--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
                 </div>
                 <div class="header-hero">
                     <h1>Enkelt, snabbt och miljövänligt.</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis quo inventore nemo eligendi maiores similique sequi porro laboriosam? Aliquam, eum.</p>
                     <button class="button button-primary">Läs mer</button>
                 </div>
                 <div class="header-overlay"></div>
