--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
         <header id="header">
             <div class="header-wrapper">
                 <div class="header-video">
-                    <video src="/video_bg/cityvid.mp4" autoplay="true" loop="true"></video>
+                    <video src="/vid_bg/city-traffic.mp4" autoplay="true" loop="true"></video>
                 </div>
                 <div class="header-hero">
                     <h1>Enkelt, snabbt och miljövänligt.</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis quo inventore nemo eligendi maiores similique sequi porro laboriosam? Aliquam, eum.</p>
+                    <p>With our initiative to pay as we like to call it, an "earth tax", we will donate 1% of each sale</p>
                     <button class="button button-primary">Läs mer</button>
                 </div>
                 <div class="header-overlay"></div>
