--- a/index.html
+++ b/index.html
@@ -107,9 +107,10 @@
 
                 <div class="footer-wrapper-box1">
                 <ul>
-                   <a href=""><li id="footer-li1">Kontakta Oss</li></a>
-                   <a href=""><li id="footer-li2">Om Oss</li></a>
-                   <a href=""><li id="footer-li3">Handla och Betala</li></a>
+                   <a href="#"><li id="footer-li1">Products</li></a>
+                   <a href="#"><li id="footer-li2">About us</li></a>
+                   <a href="#"><li id="footer-li3">Contact</li></a>
+            
                 </ul>
                 </div>
 
@@ -120,15 +121,21 @@
 
                 <div class="footer-wrapper-box3">
                         <ul>
-                                <h1>Följ Oss</h1>
-                                <a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-square fa-2x"></i></a>
-                                <a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter-square fa-2x"></i></a>
+                            <i class="far fa-smile-wink">Följ Oss</i>
+                            <br>
+                            <a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-square fa-2x"></i></a>
+                            <a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter-square fa-2x"></i></a>
                             <a href="https://www.linkedin.com" target="_blank"><i class="fab fa-linkedin fa-2x"></i></a>
                         </ul>
                 </div>
-
-
             </div>
+
+<div class="footer-bottum">
+    <i class="fas fa-home">Tulegatan 29</i>
+  &copy; Printee.com 
+  <i class="fas fa-phone"> 070-5620022</i>
+</div>
+
         </footer>
     </main>
     
