dev first commit, gulpfile edited, entire detail-page added, javascript begun to fetch values

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <a href=""><img src="images/logotype.svg" alt="logotype"></a>
             </div>
             <ul id="nav-container">
-                <a href=""><li class="nav-item">product</li></a> 
+                <a href="/pages/product-detail.html"><li class="nav-item">product</li></a> 
                 <a href=""><li class="nav-item">about</li></a> 
                 <a href=""><li class="nav-item">contact</li></a> 
             </ul>
