--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Grupp Projekt</title>
+    <link href="https://fonts.googleapis.com/css?family=Baloo+Bhai&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,900i&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <link rel="stylesheet" href="css/main.css">
     
@@ -89,18 +91,22 @@
         </section>
 
         <section id="about">
-            <div class="about-wrapper">
-                <div class="about-container">
-                    <div class="about-image">
-                        <img src="" alt="about-image">
+                <div class="about-wrapper">
+                    <div class="about-container">
+
+                        <div class="about-image-globe animated 	rollIn delay-1s">
+                                <img class ="globe" src="images/planet-earth.jpg" alt="globe">
+                            <!-- <img src="https://images.pexels.com/photos/87651/earth-blue-planet-globe-planet-87651.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt=""> -->
+                        </div>
+                        <div class="about-text-circle about-image animated fadeInLeft delay-2s">
+                        <div class="about-text">
+                            <h3>ABOUT US</h3>
+                            <p>PRINTEE offers quality basics with custom made prints for your company. We believe that everyone has a responsibility to care for our future and that is why we always have our planet in mind when we make our products. We only use <span class="organic">100% organic</span> cotton and we make all your orders on demand, which makes a lot less waste. Good for you & good for the future! </p>
+                        </div>
                     </div>
-                    <div class="about-text">
-                        <h3>titel</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia, ullam expedita veniam optio est rem deserunt ex consectetur corrupti quidem omnis dolor fugit, cum nobis beatae vel exercitationem ad eum!</p>
                     </div>
                 </div>
-            </div>
-        </section>
+            </section>
 
         <footer id="footer">
             <div class="footer-wrapper">
