first commit + checkout

--- a/index.html
+++ b/index.html
@@ -37,7 +37,14 @@
         <header id="header">
             <div class="header-wrapper">
                 <div class="header-video">
-                    <video src="/vid_bg/city-traffic.mp4" autoplay="true" loop="true"></video>
+                    <video id="video-ct" src="/vid_bg/city-traffic.mp4" autoplay="true" muted="true" loop="true"></video>
+                    <script>
+                        document.getElementById('video-ct').play();
+                    </script>
+                    <video autoplay muted>
+                        <source src="/vid_bg/city-traffic.mp4" type="video/webm" />
+                        <source src="/vid_bg/city-traffic.mp4" type="video/mp4" />
+                    </video>
                 </div>
                 <div class="header-hero">
                     <h1>Enkelt, snabbt och miljövänligt.</h1>
