about page merged and touched upon to avoid 3rd-party libs

--- a/pages/product-detail.html
+++ b/pages/product-detail.html
@@ -22,8 +22,8 @@
             </div>
             <ul id="nav-container">
                 <a href="/pages/product-detail.html"><li class="nav-item">product</li></a> 
-                <a href=""><li class="nav-item">about</li></a> 
-                <a href=""><li class="nav-item">contact</li></a> 
+                <a href="/pages/about.html"><li class="nav-item">about</li></a> 
+                <a href="/pages/product-detail.html"><li class="nav-item">contact</li></a> 
             </ul>
             <a class="nav-checkout" href="#varukorg">
                 <img src="../images/cart.svg" alt="cart">
@@ -162,25 +162,24 @@
         </section>
 
         <footer id="footer">
-            <div class="footer-wrapper">
-                <div class="footer-wrapper-box1">
-                <ul>
-                   <a href=""><li id="footer-li1">Kontakta Oss</li></a>
-                   <a href=""><li id="footer-li2">Om Oss</li></a>
-                   <a href=""><li id="footer-li3">Handla och Betala</li></a>
-                </ul>
+                <div class="footer-wrapper">
+                    <div class="footer-wrapper-box2">
+                        <img src="../images/logotype.svg" alt="">
+                    </div>
+                    <div class="footer-wrapper-box3">
+                            <ul>
+                                <p>Follow us <i class="far fa-smile-wink"></i></p>
+                              
+                                <a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-square fa-2x"></i></a>
+                                <a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter-square fa-2x"></i></a>
+                                <a href="https://www.linkedin.com" target="_blank"><i class="fab fa-linkedin-square fa-2x"></i></a>
+                            </ul>
+                    </div>
                 </div>
-                <div class="footer-wrapper-box2">
-                    <img src="https://cdn.discordapp.com/attachments/639038935183523840/644184731352825886/unknown.png" alt="">
-                </div>
-                <div class="footer-wrapper-box3">
-                    <ul>
-                        <h3>Följ Oss</h3>
-                        <a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-square fa-2x"></i></a>
-                        <a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter-square fa-2x"></i></a>
-                        <a href="https://www.linkedin.com" target="_blank"><i class="fab fa-linkedin fa-2x"></i></a>
-                    </ul>
-                </div>
+            <div class="footer-bottum">
+                <i class="fas fa-home">  Tulegatan 29</i>
+            &copy; Printee.com 
+            <i class="fas fa-phone">  070-5620022</i>
             </div>
         </footer>
     </main>
