--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
     <nav id="navbar">
         <div class="nav-wrapper">
             <div class="logotype">
-                <a href=""><img src="images/logotype.svg" alt="logotype"></a>
+                <a href="index.html"><img src="images/logotype.svg" alt="logotype"></a>
             </div>
             <ul id="nav-container">
-                <a href="/pages/product-detail.html"><li class="nav-item">product</li></a> 
-                <a href=""><li class="nav-item">about</li></a> 
-                <a href=""><li class="nav-item">contact</li></a> 
+                <a href="/pages/product-list.html"><li class="nav-item">product</li></a> 
+                <a href="/pages/about.html"><li class="nav-item">about</li></a> 
+                <a href="/pages/product-detail.html"><li class="nav-item">contact</li></a> 
             </ul>
-            <a class="nav-checkout" href="#varukorg">
+            <a class="nav-checkout" href="/pages/checkout.html">
                 <img src="images/cart.svg" alt="cart">
             </a>
             <div id="burger-mobile">
@@ -44,7 +44,9 @@
                 <div class="header-hero">
                     <h1>Enkelt, snabbt och miljövänligt.</h1>
                     <p>With our initiative to pay as we like to call it, an "earth tax", we will donate 1% of each sale</p>
-                    <button class="button button-primary">Läs mer</button>
+                    <a href="/pages/about.html">
+                        <button class="button button-primary">Läs mer</button>
+                    </a>
                 </div>
                 <div class="header-overlay"></div>
             </div>
@@ -92,26 +94,12 @@
             </div>
         </section>
 
-        <section id="about">
-            <div class="about-wrapper">
-                <div class="about-container">
-                    <div class="about-image">
-                        <img src="" alt="about-image">
-                    </div>
-                    <div class="about-text">
-                        <h3>titel</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia, ullam expedita veniam optio est rem deserunt ex consectetur corrupti quidem omnis dolor fugit, cum nobis beatae vel exercitationem ad eum!</p>
-                    </div>
-                </div>
-            </div>
-        </section>
-
         <footer id="footer">
                 <div class="footer-wrapper">
   
     
                     <div class="footer-wrapper-box2">
-                        <img src="https://cdn.discordapp.com/attachments/639038935183523840/644184731352825886/unknown.png" alt="">
+                        <img src="../images/logotype.svg" alt="">
                     </div>
     
                     <div class="footer-wrapper-box3">
