navbar menu added for mobile, responsive, only one issue left with scrolling, template image added

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     
 </head>
 <body>
+
     <nav id="navbar">
         <div class="nav-wrapper">
             <div class="logotype">
@@ -28,12 +29,29 @@
                 <img src="images/cart.svg" alt="cart">
             </a>
             <div id="burger-mobile">
+                <input class="checkbox-menu" type="checkbox" name="checkbox">
+                <div id="menuToggle">
+                    <div class="burger-list">
+                        <ul>
+                            <a href="/pages/product-list.html"><li class="nav-item">product</li></a> 
+                            <a href="/pages/about.html"><li class="nav-item">about</li></a> 
+                            <a href="/pages/product-detail.html"><li class="nav-item">contact</li></a> 
+                        </ul>
+                        <a class="nav-checkout" href="/pages/checkout.html">
+                            <img src="images/cart.svg" alt="cart">
+                        </a>
+                    </div>
+                    <div class="burgermenu-overlay">
+                            <img src="../images/ocean_image.jpg" alt="burger-menu-bg">
+                    </div>
+                </div>
                 <span></span>
                 <span></span>
                 <span></span>
             </div>
         </div>
     </nav>
+
     <main id="main">
         
         <header id="header">
