item-list struktur klar

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <a href=""><img src="images/logotype.svg" alt="logotype"></a>
             </div>
             <ul id="nav-container">
-                <a href=""><li class="nav-item">product</li></a> 
+                <a href="../pages/product-list.html"><li class="nav-item">product</li></a> 
                 <a href=""><li class="nav-item">about</li></a> 
                 <a href=""><li class="nav-item">contact</li></a> 
             </ul>
@@ -109,7 +109,7 @@
 
                 <div class="footer-wrapper-box1">
                 <ul>
-                   <a href="#"><li id="footer-li1">Products</li></a>
+                   <a href="pages/product-list.html"><li id="footer-li1">Products</li></a>
                    <a href="#"><li id="footer-li2">About us</li></a>
                    <a href="#"><li id="footer-li3">Contact</li></a>
             
