--- a/pages/about.html
+++ b/pages/about.html
@@ -4,32 +4,50 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>About us</title>
-    <link href="https://fonts.googleapis.com/css?family=Baloo+Bhai&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,900i&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Poppins:400,500&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/main.css">
 </head>
 <body>
     <nav id="navbar">
-            <div class="nav-wrapper">
-                <div class="logotype">
-                    <a href="../index.html"><img src="../images/logotype.svg" alt="logotype"></a>
-                </div>
-                <ul id="nav-container">
-                    <a href="/pages/product-detail.html"><li class="nav-item">product</li></a> 
-                    <a href="/pages/about.html"><li class="nav-item">about</li></a> 
-                    <a href="/pages/product-detail.html"><li class="nav-item">contact</li></a> 
-                </ul>
-                <a class="nav-checkout" href="#varukorg">
-                    <img src="../images/cart.svg" alt="cart">
-                </a>
-                <div id="burger-mobile">
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                </div>
+        <div class="nav-wrapper">
+            <div class="logotype">
+                <a href="../index.html"><img src="../images/logotype.svg" alt="logotype"></a>
             </div>
-        </nav>
+            <ul id="nav-container">
+                <a href="product-list.html"><li class="nav-item">product</li></a> 
+                <a href="about.html"><li class="nav-item">about</li></a> 
+                <a href="product-detail.html"><li class="nav-item">contact</li></a> 
+            </ul>
+            <a class="nav-checkout" href="checkout.html">
+                <img src="../images/cart.svg" alt="cart">
+            </a>
+            <div id="burger-mobile">
+                <input class="checkbox-menu" type="checkbox" name="checkbox">
+                <div id="menuToggle">
+                    <div class="burger-list">
+                        <ul>
+                            <a href="product-list.html"><li class="nav-item">product</li></a> 
+                            <a href="about.html"><li class="nav-item">about</li></a> 
+                            <a href="product-detail.html"><li class="nav-item">contact</li></a> 
+                        </ul>
+                        <a class="nav-checkout" href="checkout.html">
+                            <img src="../images/cart.svg" alt="cart">
+                        </a>
+                    </div>
+                    <div class="burgermenu-overlay">
+                            <img src="../images/ocean_image.jpg" alt="burger-menu-bg">
+                    </div>
+                </div>
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+        </div>
+    </nav>
     <main>
         <section id="about">
                 <div class="about-wrapper">
@@ -70,6 +88,6 @@
             </div>
         </footer>
     </main>
-
+<script src="../js/script.js"></script>
 </body>
 </html>
