--- a/pages/product-detail.html
+++ b/pages/product-detail.html
@@ -8,33 +8,45 @@
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400i,600,900,900i&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Poppins:400,500&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
-    <script
-  src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-  integrity="sha256-pasqAKBDmFT4eHoN2ndd6lN370kFiGUFyTiUHWhU7k8="
-  crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../css/main.css">
 </head>
 <body>
-    <nav id="navbar">
-        <div class="nav-wrapper">
-            <div class="logotype">
-                <a href="../index.html"><img src="../images/logotype.svg" alt="logotype"></a>
+        <nav id="navbar">
+            <div class="nav-wrapper">
+                <div class="logotype">
+                    <a href="../index.html"><img src="../images/logotype.svg" alt="logotype"></a>
+                </div>
+                <ul id="nav-container">
+                    <a href="product-list.html"><li class="nav-item">product</li></a> 
+                    <a href="about.html"><li class="nav-item">about</li></a> 
+                    <a href="product-detail.html"><li class="nav-item">contact</li></a> 
+                </ul>
+                <a class="nav-checkout" href="checkout.html">
+                    <img src="../images/cart.svg" alt="cart">
+                </a>
+                <div id="burger-mobile">
+                    <input class="checkbox-menu" type="checkbox" name="checkbox">
+                    <div id="menuToggle">
+                        <div class="burger-list">
+                            <ul>
+                                <a href="product-list.html"><li class="nav-item">product</li></a> 
+                                <a href="about.html"><li class="nav-item">about</li></a> 
+                                <a href="product-detail.html"><li class="nav-item">contact</li></a> 
+                            </ul>
+                            <a class="nav-checkout" href="checkout.html">
+                                <img src="../images/cart.svg" alt="cart">
+                            </a>
+                        </div>
+                        <div class="burgermenu-overlay">
+                                <img src="../images/ocean_image.jpg" alt="burger-menu-bg">
+                        </div>
+                    </div>
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
             </div>
-            <ul id="nav-container">
-                <a href="/pages/product-detail.html"><li class="nav-item">product</li></a> 
-                <a href="/pages/about.html"><li class="nav-item">about</li></a> 
-                <a href="/pages/product-detail.html"><li class="nav-item">contact</li></a> 
-            </ul>
-            <a class="nav-checkout" href="#varukorg">
-                <img src="../images/cart.svg" alt="cart">
-            </a>
-            <div id="burger-mobile">
-                <span></span>
-                <span></span>
-                <span></span>
-            </div>
-        </div>
-    </nav>
+        </nav>
     <main id="main">
 
         <section id="detail-product">
@@ -183,7 +195,7 @@
             </div>
         </footer>
     </main>
-    
+    <script src="../js/script.js"></script>
     <script src="../js/_detail-page.js"></script>
 </body>
 </html>
