--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
             <ul id="nav-container">
                 <a href=""><li class="nav-item">product</li></a> 
                 <a href=""><li class="nav-item">about</li></a> 
-                <a href=""><li class="nav-item">contact</li></a> 
+                <a href="/pages/checkout.html"><li class="nav-item">contact</li></a> 
             </ul>
-            <a class="nav-checkout" href="#varukorg">
+            <a class="nav-checkout" href="/pages/checkout.html">
                 <img src="images/cart.svg" alt="cart">
             </a>
             <div id="burger-mobile">
@@ -38,13 +38,6 @@
             <div class="header-wrapper">
                 <div class="header-video">
                     <video id="video-ct" src="/vid_bg/city-traffic.mp4" autoplay="true" muted="true" loop="true"></video>
-                    <script>
-                        document.getElementById('video-ct').play();
-                    </script>
-                    <video autoplay muted>
-                        <source src="/vid_bg/city-traffic.mp4" type="video/webm" />
-                        <source src="/vid_bg/city-traffic.mp4" type="video/mp4" />
-                    </video>
                 </div>
                 <div class="header-hero">
                     <h1>Enkelt, snabbt och miljövänligt.</h1>
@@ -54,7 +47,6 @@
                 <div class="header-overlay"></div>
             </div>
         </header>
-
         <section id="cards">
             <div class="cards-wrapper">
 
