small fixes directly into master

--- a/pages/about.html
+++ b/pages/about.html
@@ -20,7 +20,7 @@
             <ul id="nav-container">
                 <a href="product-list.html"><li class="nav-item">product</li></a> 
                 <a href="about.html"><li class="nav-item">about</li></a> 
-                <a href="product-detail.html"><li class="nav-item">contact</li></a> 
+                <a href=""><li class="nav-item">contact</li></a> 
             </ul>
             <a class="nav-checkout" href="checkout.html">
                 <img src="../images/cart.svg" alt="cart">
