--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                         <ul>
                             <a href="/pages/product-list.html"><li class="nav-item">product</li></a> 
                             <a href="/pages/about.html"><li class="nav-item">about</li></a> 
-                            <a href="/pages/product-detail.html"><li class="nav-item">contact</li></a> 
+                            <a href=""><li class="nav-item">contact</li></a> 
                         </ul>
                         <a class="nav-checkout" href="/pages/checkout.html">
                             <img src="images/cart.svg" alt="cart">
@@ -136,29 +136,6 @@
             <i class="fas fa-phone">  070-5620022</i>
             </div>
         </section>
-
-        <footer id="footer">
-            <div class="footer-wrapper">
-                <div class="footer-wrapper-box2">
-                    <img src="https://cdn.discordapp.com/attachments/639038935183523840/644184731352825886/unknown.png" alt="">
-                </div>
-
-                <div class="footer-wrapper-box3">
-                        <ul>
-                            <i class="far fa-smile-wink">Följ Oss</i>
-                            <br>
-                            <a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-square fa-2x"></i></a>
-                            <a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter-square fa-2x"></i></a>
-                            <a href="https://www.linkedin.com" target="_blank"><i class="fab fa-linkedin fa-2x"></i></a>
-                        </ul>
-                </div>
-            </div>
-        <div class="footer-bottum">
-            <i class="fas fa-home">Tulegatan 29</i>
-          &copy; Printee.com 
-          <i class="fas fa-phone"> 070-5620022</i>
-        </div>
-
         </footer>
     </main>
     
