--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <header id="header">
             <div class="header-wrapper">
                 <div class="header-video">
-                    <video id="video-ct" src="/vid_bg/city-traffic.mp4" autoplay="true"></video>
+                    <video id="video-ct" src="/vid_bg/city-traffic.mp4" autoplay="true" muted="true"></video>
                 </div>
                 <div class="header-hero">
                     <h1>Enkelt, snabbt och miljövänligt.</h1>
