--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Grupp Projekt</title>
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,900i&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Poppins:400,500&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
+    <title>Landing Page</title>
 </head>
 <body>
 
@@ -22,7 +22,7 @@
             <ul id="nav-container">
                 <a href="/pages/product-list.html"><li class="nav-item">product</li></a> 
                 <a href="/pages/about.html"><li class="nav-item">about</li></a> 
-                <a href="/pages/product-detail.html"><li class="nav-item">contact</li></a> 
+                <a href="/pages/contact.html"><li class="nav-item">contact</li></a> 
             </ul>
             <a class="nav-checkout" href="/pages/checkout.html">
                 <img src="images/cart.svg" alt="cart">
@@ -34,14 +34,14 @@
                         <ul>
                             <a href="/pages/product-list.html"><li class="nav-item">product</li></a> 
                             <a href="/pages/about.html"><li class="nav-item">about</li></a> 
-                            <a href=""><li class="nav-item">contact</li></a> 
+                            <a href="/pages/checkout.html"><li class="nav-item">contact</li></a> 
                         </ul>
                         <a class="nav-checkout" href="/pages/checkout.html">
                             <img src="images/cart.svg" alt="cart">
                         </a>
                     </div>
                     <div class="burgermenu-overlay">
-                            <img src="../images/ocean_image.jpg" alt="burger-menu-bg">
+                        <img src="../images/ocean_image.jpg" alt="burger-menu-bg">
                     </div>
                 </div>
                 <span></span>
