--- a/pages/contact.html
+++ b/pages/contact.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>About us</title>
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,900i&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Poppins:400,500&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/main.css">
+    <title>Printee | Contact</title>
 </head>
 <body>
     <nav id="navbar">
@@ -48,39 +49,45 @@
             </div>
         </div>
     </nav>
-    <main>
-        <section id="about">
-                <div class="about-wrapper">
-                    <div class="about-container">
-                        <div class="about-image-globe">
-                                <img class ="globe" src="../images/planet-earth.jpg" alt="globe">
-                            <!-- <img src="https://images.pexels.com/photos/87651/earth-blue-planet-globe-planet-87651.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt=""> -->
+    <main id="main">
+
+        <section id="contact">
+            <div class="contact-wrapper">
+                <div class="contact-container">
+
+                    <div class="contact-content">
+                        <div class="contact-text">
+                            <div class="contact-title">
+                                <h1>Contact us!</h1>
+                            </div>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum corrupti nesciunt modi officia possimus laboriosam molestiae vel, laborum asperiores quia inventore magni, nostrum ullam expedita ipsum quibusdam iste voluptate odio dolorum aliquam eius totam! Quia at excepturi voluptatum officia illum perspiciatis, quas animi neque quasi, quae nemo autem, assumenda suscipit!
+                            </p>
                         </div>
-                        <div class="about-text-circle about-image">
-                        <div class="about-text">
-                            <h3>ABOUT US</h3>
-                            <p>PRINTEE offers quality basics with custom made prints for your company. We believe that everyone has a responsibility to care for our future and that is why we always have our planet in mind when we make our products. We only use <span class="organic">100% organic</span> cotton and we make all your orders on demand, which makes a lot less waste. Good for you & good for the future! </p>
+                        <div id="map">
+                                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2034.2135041573238!2d18.055839615847933!3d59.34608381672144!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x465f9d6c1f42b387%3A0xdfa8086ea7907082!2sTulegatan%2041%2C%20113%2053%20Stockholm!5e0!3m2!1ssv!2sse!4v1575559886757!5m2!1ssv!2sse" width="320" height="250" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
                         </div>
                     </div>
+
                 </div>
             </div>
-        </section>  
-            
+
+        </section>
+
         <footer id="footer">
-            <div class="footer-wrapper">
-                <div class="footer-wrapper-box2">
-                    <img src="../images/logotype.svg" alt="">
-                </div>
-                <div class="footer-wrapper-box3">
+                <div class="footer-wrapper">
+                    <div class="footer-wrapper-box2">
+                        <img src="../images/logotype.svg" alt="">
+                    </div>
+                    <div class="footer-wrapper-box3">
                         <ul>
                             <p>Follow us <i class="far fa-smile-wink"></i></p>
-                            
                             <a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-square fa-2x"></i></a>
                             <a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter-square fa-2x"></i></a>
                             <a href="https://www.linkedin.com" target="_blank"><i class="fab fa-linkedin-square fa-2x"></i></a>
                         </ul>
+                    </div>
                 </div>
-            </div>
             <div class="footer-bottum">
                 <i class="fas fa-home">  Tulegatan 29</i>
             &copy; Printee.com 
@@ -88,6 +95,7 @@
             </div>
         </footer>
     </main>
-<script src="../js/script.js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&callback=initMap"
+    async defer></script>
 </body>
 </html>
