--- a/pages/product-list.html
+++ b/pages/product-list.html
@@ -22,7 +22,7 @@
                 <ul id="nav-container">
                     <a href="product-list.html"><li class="nav-item">product</li></a> 
                     <a href="about.html"><li class="nav-item">about</li></a> 
-                    <a href=""><li class="nav-item">contact</li></a> 
+                    <a href="contact.html"><li class="nav-item">contact</li></a> 
                 </ul>
                 <a class="nav-checkout" href="checkout.html">
                     <img src="../images/cart.svg" alt="cart">
@@ -34,14 +34,14 @@
                             <ul>
                                 <a href="product-list.html"><li class="nav-item">product</li></a> 
                                 <a href="about.html"><li class="nav-item">about</li></a> 
-                                <a href="product-detail.html"><li class="nav-item">contact</li></a> 
+                                <a href="contact.html"><li class="nav-item">contact</li></a> 
                             </ul>
                             <a class="nav-checkout" href="checkout.html">
                                 <img src="../images/cart.svg" alt="cart">
                             </a>
                         </div>
                         <div class="burgermenu-overlay">
-                                <img src="../images/ocean_image.jpg" alt="burger-menu-bg">
+                            <img src="../images/ocean_image.jpg" alt="burger-menu-bg">
                         </div>
                     </div>
                     <span></span>
