--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <section id="cards">
             <div class="cards-wrapper">
 
-                <a href="">
+                <a href="pages/faktura.html">
                     <div class="landing-cards">
                         <div class="landing-image">
                             <img src="https://images.pexels.com/photos/2974657/pexels-photo-2974657.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" alt="">
