--- a/pages/checkout.html
+++ b/pages/checkout.html
@@ -76,7 +76,7 @@
                     </a>
                 </div> -->
             </ul>
-            <button id="pay-btn">Send order and pay</button>
+           <a href="faktura.html"> <button id="pay-btn">Send order and pay</button></a>
             <h3>Total Price: <span class="total-price"></span></h3>
         </div>
     </main>
