Print as PDF function

--- a/pages/faktura.html
+++ b/pages/faktura.html
@@ -71,6 +71,8 @@
         
             
             </page>        
-
+            <div class="button-section">
+                <button class="button-primary button-PrintPDF">Print as PDF</button>
+            </div>
 </body>
 </html>
