Housekeeping cleanup, bg removed on globe, javascript housekeeping, checkout is now responsive

--- a/index.html
+++ b/index.html
@@ -56,21 +56,21 @@
         <header id="header">
             <div class="header-wrapper">
                 <div class="header-video">
-                    <video id="video-ct" src="/vid_bg/city-traffic.mp4" autoplay="true" muted="true"></video>
+                    <video id="video-ct" src="/vid_bg/city-traffic.mp4" autoplay="true" muted="true" loop="true"></video>
                 </div>
                 <div class="header-hero">
-                    <h1>Enkelt, snabbt och miljövänligt.</h1>
+                    <h1>Simple, fast och eco.</h1>
                     <p>With our initiative to pay as we like to call it, an "earth tax", we will donate 1% of each sale</p>
                     <a href="/pages/about.html">
-                        <button class="button button-primary">Läs mer</button>
+                        <button class="button button-primary">Read more</button>
                     </a>
                 </div>
                 <div class="header-overlay"></div>
             </div>
         </header>
-        <section id="cards">
+        
+        <!-- <section id="cards">
             <div class="cards-wrapper">
-
                 <a href="pages/faktura.html">
                     <div class="landing-cards">
                         <div class="landing-image">
@@ -107,6 +107,25 @@
                     </div>
                 </a>
 
+            </div>
+        </section> -->
+
+        <section id="printee">
+            <div class="printee-wrapper">
+                <div class="printee-container">
+                    <div class="printee-text">
+                        <h2>Printee AB</h2>
+                        <p>We'll supply you with custommade clothing</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro, maxime?</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus totam neque quaerat.</p>
+                    </div>
+
+                    <div class="printee-image">
+                        <img src="images/tshirt_bg.png" alt="t-shirt print">
+                        <div class="printee-img-bg"></div>
+                    </div>
+
+                </div>
             </div>
         </section>
 
