--- a/pages/about.html
+++ b/pages/about.html
@@ -53,7 +53,7 @@
                 <div class="about-wrapper">
                     <div class="about-container">
                         <div class="about-image-globe">
-                                <img class ="globe" src="../images/planet-earth.jpg" alt="globe">
+                                <img class ="globe" src="../images/planet-nobg.png" alt="globe">
                             <!-- <img src="https://images.pexels.com/photos/87651/earth-blue-planet-globe-planet-87651.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt=""> -->
                         </div>
                         <div class="about-text-circle about-image">
