--- a/pages/contact.html
+++ b/pages/contact.html
@@ -58,14 +58,29 @@
                     <div class="contact-content">
                         <div class="contact-text">
                             <div class="contact-title">
-                                <h1>Contact us!</h1>
+                                <h1>Contact</h1>
                             </div>
-                            <p>
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum corrupti nesciunt modi officia possimus laboriosam molestiae vel, laborum asperiores quia inventore magni, nostrum ullam expedita ipsum quibusdam iste voluptate odio dolorum aliquam eius totam! Quia at excepturi voluptatum officia illum perspiciatis, quas animi neque quasi, quae nemo autem, assumenda suscipit!
+                            <p class="contact-title-text">
+                                We are currently located at Tulegatan 41 for our startup company. We're currently hiring as well
                             </p>
+                            <div class="contact-jobs-div">
+                                <h2 class="contact-jobs">Jobs</h2>
+                                <p class="contact-jobs-text">
+                                    We're currently hiring, these roles for our expanding company:
+                                    <ul>
+                                        <li>Head of Marketing</li>
+                                        <li>Business analyst</li>
+                                        <li>Customer Support</li>
+                                    </ul>
+                                </p>
+                            </div>
+
+                            <div class="contact-button">
+                                <button class="button-primary">Apply here!</button>
+                            </div>
                         </div>
                         <div id="map">
-                                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2034.2135041573238!2d18.055839615847933!3d59.34608381672144!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x465f9d6c1f42b387%3A0xdfa8086ea7907082!2sTulegatan%2041%2C%20113%2053%20Stockholm!5e0!3m2!1ssv!2sse!4v1575559886757!5m2!1ssv!2sse" width="320" height="250" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+                                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2034.2135041573238!2d18.055839615847933!3d59.34608381672144!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x465f9d6c1f42b387%3A0xdfa8086ea7907082!2sTulegatan%2041%2C%20113%2053%20Stockholm!5e0!3m2!1ssv!2sse!4v1575559886757!5m2!1ssv!2sse" width="300" height="250" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
                         </div>
                     </div>
 
