--- a/pages/product-detail.html
+++ b/pages/product-detail.html
@@ -56,9 +56,9 @@
                 <div class="detail-container">
 
                     <div class="detail-back-button">
-                        <a href="">
+                        <a href="/pages/product-list.html">
                             <i class="fas fa-long-arrow-alt-left"></i>
-                            tillbaka
+                            back
                         </a>
                     </div>
                     <!-- första column -->
@@ -66,15 +66,15 @@
                         <div class="detail-side-images">
                             <div class="side-image-container">
                                 <a href="">
-                                    <img src="https://images.unsplash.com/photo-1553754538-466add009c05?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1495&q=80" alt=""></a>
+                                    <img src="https://images.unsplash.com/photo-1521572163474-6864f9cf17ab?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1100&q=80" alt=""></a>
                             </div>
                             <div class="side-image-container">
                                 <a href="">
-                                    <img src="https://images.unsplash.com/photo-1503342217505-b0a15ec3261c?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1650&q=80" alt=""></a>
+                                    <img src="https://images.unsplash.com/photo-1521572163474-6864f9cf17ab?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1100&q=80" alt=""></a>
                             </div>
                             <div class="side-image-container">
                                 <a href="">
-                                    <img src="https://images.unsplash.com/photo-1513787345924-e09d880a19a5?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=668&q=80" alt="">
+                                    <img src="https://images.unsplash.com/photo-1521572163474-6864f9cf17ab?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1100&q=80" alt="">
                                 </a>
                             </div>
                         </div>
@@ -168,10 +168,6 @@
 
                     </div>
                 </div>
-            </div>
-
-            <div class="append-here">
-                
             </div>
         </section>
 
