almost done, just add if cart is empty

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -76,7 +76,9 @@
                             </div>
 
                             <div class="contact-button">
-                                <button class="button-primary">Apply here!</button>
+                                <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">
+                                    <button class="button-primary">Apply here!</button>
+                                </a>
                             </div>
                         </div>
                         <div id="map">
