--- a/pages/product-detail.html
+++ b/pages/product-detail.html
@@ -164,6 +164,9 @@
 
                         <div class="detail-button">
                             <button class="button button-primary" id="detail-to-checkout">lägg i varukorg</button>
+                            <div class="added-to-cart-text">
+                                <span class="cartAddText">* Added to cart!</span>
+                            </div>
                         </div>
 
                     </div>
