found bug that mobile contact link was wrong

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                         <ul>
                             <a href="/pages/product-list.html"><li class="nav-item">product</li></a> 
                             <a href="/pages/about.html"><li class="nav-item">about</li></a> 
-                            <a href="/pages/checkout.html"><li class="nav-item">contact</li></a> 
+                            <a href="/pages/contact.html"><li class="nav-item">contact</li></a> 
                         </ul>
                         <a class="nav-checkout" href="/pages/checkout.html">
                             <img src="images/cart.svg" alt="cart">
